--- a/style.css
+++ b/style.css
@@ -10,9 +10,15 @@
 }
 #email-error{
   color: red;
-  margin: 0;
-  text-align: right;
+  float: right;
+  margin-right: -28px;
+  font-size: 16px;
+  
+  
+  
+  
 }
+
 *{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -28,6 +34,9 @@
 h5{
     margin-top: 0;
     font-size: 16px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  
 }
 h1{
     font-weight: bold;
@@ -52,8 +61,8 @@ ul{
 }
 .placeholder{
     border-radius: 6px;
-    padding: 15px 34px;
-    width: 255px;
+    padding: 14px 15px;
+    width: 289px;
     text-align: left;
 }
 #buttons{
@@ -80,6 +89,7 @@ body{
     padding-bottom: 18px;
     line-height: 15px;
     font-size: 15px;
+    
    
 }
 .list2{
