--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ h1{
     border-radius: 6px;
     padding: 15px 34px;
     margin-top: 28px;
+    border-color: none;
 }
 ul{
   list-style-image: none;
